<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_F9">

    <include
        layout="@layout/layout_sign_in_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/signUpUsernameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signUpUsernameEditText"
        style="@style/BaseEditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginHorizontal="@dimen/spacing_xxlarge"
        android:layout_marginBottom="@dimen/spacing_large"
        android:hint="@string/email"
        android:paddingHorizontal="@dimen/edit_text_padding_horizontal"
        app:layout_constraintBottom_toTopOf="@id/signUpPasswordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/signUpPasswordEditText"
        style="@style/BaseEditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginHorizontal="@dimen/spacing_xxlarge"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginBottom="@dimen/spacing_xlarge"
        android:hint="@string/password"
        android:paddingHorizontal="@dimen/edit_text_padding_horizontal"
        app:layout_constraintBottom_toTopOf="@id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signUpButton"
        style="@style/OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginBottom="@dimen/spacing_xsmall"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@id/signInOrTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signInOrTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/signUpSignInTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signUpSignInTextView"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/signUpCengaCopyrightTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signUpCengaCopyrightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:alpha=".6"
        android:text="@string/cenga_copyright"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
